check_output_3.txt
    Checking jlo v8.1.5 (/app)
error[E0432]: unresolved import `crate::domain::IoErrorKind`
 --> src/services/adapters/workstream_schedule_filesystem.rs:3:51
  |
3 | use crate::domain::{AppError, WorkstreamSchedule, IoErrorKind};
  |                                                   ^^^^^^^^^^^ no `IoErrorKind` in `domain`
  |
  = help: consider importing this enum instead:
          crate::domain::error::IoErrorKind

error[E0533]: expected value, found struct variant `AppError::Io`
  --> src/app/commands/run/mock/observer.rs:70:50
   |
70 |     std::fs::create_dir_all(&events_dir).map_err(AppError::Io)?;
   |                                                  ^^^^^^^^^^^^ not a value
   |
help: you might have meant to create a new value of the struct
   |
70 |     std::fs::create_dir_all(&events_dir).map_err(AppError::Io { message: /* value */, kind: /* value */ })?;
   |                                                               +++++++++++++++++++++++++++++++++++++++++++

error[E0533]: expected value, found struct variant `AppError::Io`
   --> src/app/commands/workflow/cleanup/mock.rs:163:48
    |
163 |             std::fs::remove_file(file).map_err(AppError::Io)?;
    |                                                ^^^^^^^^^^^^ not a value
    |
help: you might have meant to create a new value of the struct
    |
163 |             std::fs::remove_file(file).map_err(AppError::Io { message: /* value */, kind: /* value */ })?;
    |                                                             +++++++++++++++++++++++++++++++++++++++++++

error[E0533]: expected value, found struct variant `AppError::Io`
   --> src/app/commands/workflow/cleanup/mock.rs:185:57
    |
185 |         let metadata = std::fs::metadata(&path).map_err(AppError::Io)?;
    |                                                         ^^^^^^^^^^^^ not a value
    |
help: you might have meant to create a new value of the struct
    |
185 |         let metadata = std::fs::metadata(&path).map_err(AppError::Io { message: /* value */, kind: /* value */ })?;
    |                                                                      +++++++++++++++++++++++++++++++++++++++++++

error[E0533]: expected value, found struct variant `AppError::Io`
   --> src/app/commands/workflow/cleanup/mock.rs:187:60
    |
187 |             let entries = std::fs::read_dir(&path).map_err(AppError::Io)?;
    |                                                            ^^^^^^^^^^^^ not a value
    |
help: you might have meant to create a new value of the struct
    |
187 |             let entries = std::fs::read_dir(&path).map_err(AppError::Io { message: /* value */, kind: /* value */ })?;
    |                                                                         +++++++++++++++++++++++++++++++++++++++++++

error[E0533]: expected value, found struct variant `AppError::Io`
   --> src/app/commands/workflow/cleanup/mock.rs:189:42
    |
189 |                 stack.push(entry.map_err(AppError::Io)?.path());
    |                                          ^^^^^^^^^^^^ not a value
    |
help: you might have meant to create a new value of the struct
    |
189 |                 stack.push(entry.map_err(AppError::Io { message: /* value */, kind: /* value */ })?.path());
    |                                                       +++++++++++++++++++++++++++++++++++++++++++

error[E0533]: expected value, found struct variant `AppError::Io`
   --> src/app/commands/workflow/cleanup/mock.rs:213:27
    |
213 |         Err(error) => Err(AppError::Io(error)),
    |                           ^^^^^^^^^^^^ not a value
    |
help: you might have meant to create a new value of the struct
    |
213 -         Err(error) => Err(AppError::Io(error)),
213 +         Err(error) => Err(AppError::Io { message: /* value */, kind: /* value */ }),
    |

error[E0533]: expected value, found struct variant `AppError::Io`
   --> src/services/adapters/memory_workspace_store.rs:142:25
    |
142 |             None => Err(AppError::Io(std::io::Error::new(
    |                         ^^^^^^^^^^^^ not a value
    |
help: you might have meant to create a new value of the struct
    |
142 -             None => Err(AppError::Io(std::io::Error::new(
143 -                 std::io::ErrorKind::NotFound,
144 -                 format!("File not found: {}", path.display()),
145 -             ))),
142 +             None => Err(AppError::Io { message: /* value */, kind: /* value */ }),
    |

error[E0533]: expected value, found struct variant `AppError::Io`
   --> src/services/adapters/memory_workspace_store.rs:213:17
    |
213 |             Err(AppError::Io(std::io::Error::new(std::io::ErrorKind::NotFound, "src not found")))
    |                 ^^^^^^^^^^^^ not a value
    |
help: you might have meant to create a new value of the struct
    |
213 -             Err(AppError::Io(std::io::Error::new(std::io::ErrorKind::NotFound, "src not found")))
213 +             Err(AppError::Io { message: /* value */, kind: /* value */ })
    |

Some errors have detailed explanations: E0432, E0533.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `jlo` (lib) due to 9 previous errors
